Proyectos/Proyecto2/src/main/java/com/mycompany/proyecto2/y.output
   0  $accept : input_file $end

   1  input_file :
   2             | file_input

   3  file_input : file_input1
   4             | file_input SALTO

   5  file_input1 : stmt
   6              | file_input stmt

   7  stmt : simple_stmt
   8       | compound_stmt

   9  simple_stmt : small_stmt SALTO

  10  small_stmt : expr_stmt
  11             | print_stmt

  12  expr_stmt : expr_stmt1 test

  13  expr_stmt1 : test '='

  14  print_stmt : print_stmt1 test

  15  print_stmt1 : PRINT

  16  compound_stmt : if_stmt
  17                | while_stmt
  18                | for_stmt

  19  if_stmt : if_stmt1 suite
  20          | if_stmt3 suite

  21  if_stmt1 : if_stmt2 test ':'

  22  if_stmt2 : IF

  23  if_stmt3 : if_stmt4 if_stmt5 ':'

  24  if_stmt4 : if_stmt1 suite

  25  if_stmt5 : ELSE
  26           | ELIF

  27  while_stmt : while_stmt1 suite

  28  while_stmt1 : while_stmt2 test ':'

  29  while_stmt2 : WHILE

  30  for_stmt : for_stmt1 suite

  31  for_stmt1 : for_stmt2 test ':'

  32  for_stmt2 : FOR

  33  suite : simple_stmt
  34        | suite5 suite3 DEINDENTA

  35  suite2 : suite2 stmt
  36         | stmt

  37  suite3 : suite4 suite2

  38  suite4 : INDENTA

  39  suite5 : SALTO

  40  test : or_test

  41  or_test : and_test
  42          | or_test1 or_test

  43  or_test1 : and_test OR

  44  and_test : not_test
  45           | and_test1 and_test

  46  and_test1 : not_test AND

  47  not_test : not_test1 not_test
  48           | comparison

  49  not_test1 : NOT

  50  comparison : expr
  51             | comparison1 expr

  52  comparison1 : comparison comp_op

  53  comp_op : '<'
  54          | '>'
  55          | IGUAL_IGUAL
  56          | MENOR_IGUAL
  57          | MAYOR_IGUAL
  58          | DIFERENTE

  59  expr : term
  60       | term expr1

  61  expr1 : op expr

  62  op : '-'
  63     | '+'

  64  term : factor
  65       | term1 factor

  66  term1 : term op1

  67  op1 : '*'
  68      | '/'
  69      | '%'
  70      | DIVISION_SUELO

  71  factor : power
  72         | op factor

  73  power : power1 factor
  74        | atom

  75  power1 : atom POW

  76  atom : IDENTIFICADOR
  77       | ENTERO
  78       | CADENA
  79       | REAL
  80       | BOOLEANO

state 0
	$accept : . input_file $end  (0)
	input_file : .  (1)

	WHILE  shift 1
	FOR  shift 2
	NOT  shift 3
	IF  shift 4
	PRINT  shift 5
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	$end  reduce 1

	input_file  goto 13
	file_input  goto 14
	file_input1  goto 15
	stmt  goto 16
	simple_stmt  goto 17
	compound_stmt  goto 18
	small_stmt  goto 19
	expr_stmt  goto 20
	print_stmt  goto 21
	expr_stmt1  goto 22
	test  goto 23
	print_stmt1  goto 24
	if_stmt  goto 25
	while_stmt  goto 26
	for_stmt  goto 27
	if_stmt1  goto 28
	if_stmt3  goto 29
	if_stmt2  goto 30
	if_stmt4  goto 31
	while_stmt1  goto 32
	while_stmt2  goto 33
	for_stmt1  goto 34
	for_stmt2  goto 35
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 1
	while_stmt2 : WHILE .  (29)

	.  reduce 29


state 2
	for_stmt2 : FOR .  (32)

	.  reduce 32


state 3
	not_test1 : NOT .  (49)

	.  reduce 49


state 4
	if_stmt2 : IF .  (22)

	.  reduce 22


state 5
	print_stmt1 : PRINT .  (15)

	.  reduce 15


state 6
	atom : BOOLEANO .  (80)

	.  reduce 80


state 7
	atom : ENTERO .  (77)

	.  reduce 77


state 8
	atom : REAL .  (79)

	.  reduce 79


state 9
	atom : IDENTIFICADOR .  (76)

	.  reduce 76


state 10
	atom : CADENA .  (78)

	.  reduce 78


state 11
	op : '-' .  (62)

	.  reduce 62


state 12
	op : '+' .  (63)

	.  reduce 63


state 13
	$accept : input_file . $end  (0)

	$end  accept


state 14
	input_file : file_input .  (2)
	file_input : file_input . SALTO  (4)
	file_input1 : file_input . stmt  (6)

	SALTO  shift 52
	WHILE  shift 1
	FOR  shift 2
	NOT  shift 3
	IF  shift 4
	PRINT  shift 5
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	$end  reduce 2

	stmt  goto 53
	simple_stmt  goto 17
	compound_stmt  goto 18
	small_stmt  goto 19
	expr_stmt  goto 20
	print_stmt  goto 21
	expr_stmt1  goto 22
	test  goto 23
	print_stmt1  goto 24
	if_stmt  goto 25
	while_stmt  goto 26
	for_stmt  goto 27
	if_stmt1  goto 28
	if_stmt3  goto 29
	if_stmt2  goto 30
	if_stmt4  goto 31
	while_stmt1  goto 32
	while_stmt2  goto 33
	for_stmt1  goto 34
	for_stmt2  goto 35
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 15
	file_input : file_input1 .  (3)

	.  reduce 3


state 16
	file_input1 : stmt .  (5)

	.  reduce 5


state 17
	stmt : simple_stmt .  (7)

	.  reduce 7


state 18
	stmt : compound_stmt .  (8)

	.  reduce 8


state 19
	simple_stmt : small_stmt . SALTO  (9)

	SALTO  shift 54
	.  error


state 20
	small_stmt : expr_stmt .  (10)

	.  reduce 10


state 21
	small_stmt : print_stmt .  (11)

	.  reduce 11


state 22
	expr_stmt : expr_stmt1 . test  (12)

	NOT  shift 3
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	test  goto 55
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 23
	expr_stmt1 : test . '='  (13)

	'='  shift 56
	.  error


state 24
	print_stmt : print_stmt1 . test  (14)

	NOT  shift 3
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	test  goto 57
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 25
	compound_stmt : if_stmt .  (16)

	.  reduce 16


state 26
	compound_stmt : while_stmt .  (17)

	.  reduce 17


state 27
	compound_stmt : for_stmt .  (18)

	.  reduce 18


state 28
	if_stmt : if_stmt1 . suite  (19)
	if_stmt4 : if_stmt1 . suite  (24)

	SALTO  shift 58
	NOT  shift 3
	PRINT  shift 5
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	simple_stmt  goto 59
	small_stmt  goto 19
	expr_stmt  goto 20
	print_stmt  goto 21
	expr_stmt1  goto 22
	test  goto 23
	print_stmt1  goto 24
	suite  goto 60
	suite5  goto 61
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 29
	if_stmt : if_stmt3 . suite  (20)

	SALTO  shift 58
	NOT  shift 3
	PRINT  shift 5
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	simple_stmt  goto 59
	small_stmt  goto 19
	expr_stmt  goto 20
	print_stmt  goto 21
	expr_stmt1  goto 22
	test  goto 23
	print_stmt1  goto 24
	suite  goto 62
	suite5  goto 61
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 30
	if_stmt1 : if_stmt2 . test ':'  (21)

	NOT  shift 3
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	test  goto 63
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 31
	if_stmt3 : if_stmt4 . if_stmt5 ':'  (23)

	ELSE  shift 64
	ELIF  shift 65
	.  error

	if_stmt5  goto 66


state 32
	while_stmt : while_stmt1 . suite  (27)

	SALTO  shift 58
	NOT  shift 3
	PRINT  shift 5
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	simple_stmt  goto 59
	small_stmt  goto 19
	expr_stmt  goto 20
	print_stmt  goto 21
	expr_stmt1  goto 22
	test  goto 23
	print_stmt1  goto 24
	suite  goto 67
	suite5  goto 61
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 33
	while_stmt1 : while_stmt2 . test ':'  (28)

	NOT  shift 3
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	test  goto 68
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 34
	for_stmt : for_stmt1 . suite  (30)

	SALTO  shift 58
	NOT  shift 3
	PRINT  shift 5
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	simple_stmt  goto 59
	small_stmt  goto 19
	expr_stmt  goto 20
	print_stmt  goto 21
	expr_stmt1  goto 22
	test  goto 23
	print_stmt1  goto 24
	suite  goto 69
	suite5  goto 61
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 35
	for_stmt1 : for_stmt2 . test ':'  (31)

	NOT  shift 3
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	test  goto 70
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 36
	test : or_test .  (40)

	.  reduce 40


state 37
	or_test : and_test .  (41)
	or_test1 : and_test . OR  (43)

	OR  shift 71
	SALTO  reduce 41
	'='  reduce 41
	':'  reduce 41


state 38
	or_test : or_test1 . or_test  (42)

	NOT  shift 3
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	or_test  goto 72
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 39
	and_test : not_test .  (44)
	and_test1 : not_test . AND  (46)

	AND  shift 73
	SALTO  reduce 44
	OR  reduce 44
	'='  reduce 44
	':'  reduce 44


state 40
	and_test : and_test1 . and_test  (45)

	NOT  shift 3
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	and_test  goto 74
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 41
	not_test : not_test1 . not_test  (47)

	NOT  shift 3
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	not_test  goto 75
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 42
	not_test : comparison .  (48)
	comparison1 : comparison . comp_op  (52)

	MENOR_IGUAL  shift 76
	MAYOR_IGUAL  shift 77
	IGUAL_IGUAL  shift 78
	DIFERENTE  shift 79
	'<'  shift 80
	'>'  shift 81
	SALTO  reduce 48
	OR  reduce 48
	AND  reduce 48
	'='  reduce 48
	':'  reduce 48

	comp_op  goto 82


state 43
	comparison : expr .  (50)

	.  reduce 50


state 44
	comparison : comparison1 . expr  (51)

	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	expr  goto 83
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 45
	expr : term .  (59)
	expr : term . expr1  (60)
	term1 : term . op1  (66)

	DIVISION_SUELO  shift 84
	'-'  shift 11
	'+'  shift 12
	'*'  shift 85
	'/'  shift 86
	'%'  shift 87
	SALTO  reduce 59
	OR  reduce 59
	AND  reduce 59
	MENOR_IGUAL  reduce 59
	MAYOR_IGUAL  reduce 59
	IGUAL_IGUAL  reduce 59
	DIFERENTE  reduce 59
	'='  reduce 59
	':'  reduce 59
	'<'  reduce 59
	'>'  reduce 59

	expr1  goto 88
	op  goto 89
	op1  goto 90


state 46
	factor : op . factor  (72)

	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	op  goto 46
	factor  goto 91
	power  goto 49
	power1  goto 50
	atom  goto 51


state 47
	term : factor .  (64)

	.  reduce 64


state 48
	term : term1 . factor  (65)

	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	op  goto 46
	factor  goto 92
	power  goto 49
	power1  goto 50
	atom  goto 51


state 49
	factor : power .  (71)

	.  reduce 71


state 50
	power : power1 . factor  (73)

	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	op  goto 46
	factor  goto 93
	power  goto 49
	power1  goto 50
	atom  goto 51


state 51
	power : atom .  (74)
	power1 : atom . POW  (75)

	POW  shift 94
	SALTO  reduce 74
	OR  reduce 74
	AND  reduce 74
	MENOR_IGUAL  reduce 74
	MAYOR_IGUAL  reduce 74
	DIVISION_SUELO  reduce 74
	IGUAL_IGUAL  reduce 74
	DIFERENTE  reduce 74
	'='  reduce 74
	':'  reduce 74
	'<'  reduce 74
	'>'  reduce 74
	'-'  reduce 74
	'+'  reduce 74
	'*'  reduce 74
	'/'  reduce 74
	'%'  reduce 74


state 52
	file_input : file_input SALTO .  (4)

	.  reduce 4


state 53
	file_input1 : file_input stmt .  (6)

	.  reduce 6


state 54
	simple_stmt : small_stmt SALTO .  (9)

	.  reduce 9


state 55
	expr_stmt : expr_stmt1 test .  (12)

	.  reduce 12


state 56
	expr_stmt1 : test '=' .  (13)

	.  reduce 13


state 57
	print_stmt : print_stmt1 test .  (14)

	.  reduce 14


state 58
	suite5 : SALTO .  (39)

	.  reduce 39


state 59
	suite : simple_stmt .  (33)

	.  reduce 33


state 60
	if_stmt : if_stmt1 suite .  (19)
	if_stmt4 : if_stmt1 suite .  (24)

	$end  reduce 19
	SALTO  reduce 19
	WHILE  reduce 19
	FOR  reduce 19
	NOT  reduce 19
	IF  reduce 19
	PRINT  reduce 19
	ELSE  reduce 24
	BOOLEANO  reduce 19
	ENTERO  reduce 19
	REAL  reduce 19
	IDENTIFICADOR  reduce 19
	ELIF  reduce 24
	CADENA  reduce 19
	DEINDENTA  reduce 19
	'-'  reduce 19
	'+'  reduce 19


state 61
	suite : suite5 . suite3 DEINDENTA  (34)

	INDENTA  shift 95
	.  error

	suite3  goto 96
	suite4  goto 97


state 62
	if_stmt : if_stmt3 suite .  (20)

	.  reduce 20


state 63
	if_stmt1 : if_stmt2 test . ':'  (21)

	':'  shift 98
	.  error


state 64
	if_stmt5 : ELSE .  (25)

	.  reduce 25


state 65
	if_stmt5 : ELIF .  (26)

	.  reduce 26


state 66
	if_stmt3 : if_stmt4 if_stmt5 . ':'  (23)

	':'  shift 99
	.  error


state 67
	while_stmt : while_stmt1 suite .  (27)

	.  reduce 27


state 68
	while_stmt1 : while_stmt2 test . ':'  (28)

	':'  shift 100
	.  error


state 69
	for_stmt : for_stmt1 suite .  (30)

	.  reduce 30


state 70
	for_stmt1 : for_stmt2 test . ':'  (31)

	':'  shift 101
	.  error


state 71
	or_test1 : and_test OR .  (43)

	.  reduce 43


state 72
	or_test : or_test1 or_test .  (42)

	.  reduce 42


state 73
	and_test1 : not_test AND .  (46)

	.  reduce 46


state 74
	and_test : and_test1 and_test .  (45)

	.  reduce 45


state 75
	not_test : not_test1 not_test .  (47)

	.  reduce 47


state 76
	comp_op : MENOR_IGUAL .  (56)

	.  reduce 56


state 77
	comp_op : MAYOR_IGUAL .  (57)

	.  reduce 57


state 78
	comp_op : IGUAL_IGUAL .  (55)

	.  reduce 55


state 79
	comp_op : DIFERENTE .  (58)

	.  reduce 58


state 80
	comp_op : '<' .  (53)

	.  reduce 53


state 81
	comp_op : '>' .  (54)

	.  reduce 54


state 82
	comparison1 : comparison comp_op .  (52)

	.  reduce 52


state 83
	comparison : comparison1 expr .  (51)

	.  reduce 51


state 84
	op1 : DIVISION_SUELO .  (70)

	.  reduce 70


state 85
	op1 : '*' .  (67)

	.  reduce 67


state 86
	op1 : '/' .  (68)

	.  reduce 68


state 87
	op1 : '%' .  (69)

	.  reduce 69


state 88
	expr : term expr1 .  (60)

	.  reduce 60


state 89
	expr1 : op . expr  (61)

	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	expr  goto 102
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 90
	term1 : term op1 .  (66)

	.  reduce 66


state 91
	factor : op factor .  (72)

	.  reduce 72


state 92
	term : term1 factor .  (65)

	.  reduce 65


state 93
	power : power1 factor .  (73)

	.  reduce 73


state 94
	power1 : atom POW .  (75)

	.  reduce 75


state 95
	suite4 : INDENTA .  (38)

	.  reduce 38


state 96
	suite : suite5 suite3 . DEINDENTA  (34)

	DEINDENTA  shift 103
	.  error


state 97
	suite3 : suite4 . suite2  (37)

	WHILE  shift 1
	FOR  shift 2
	NOT  shift 3
	IF  shift 4
	PRINT  shift 5
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	.  error

	stmt  goto 104
	simple_stmt  goto 17
	compound_stmt  goto 18
	small_stmt  goto 19
	expr_stmt  goto 20
	print_stmt  goto 21
	expr_stmt1  goto 22
	test  goto 23
	print_stmt1  goto 24
	if_stmt  goto 25
	while_stmt  goto 26
	for_stmt  goto 27
	if_stmt1  goto 28
	if_stmt3  goto 29
	if_stmt2  goto 30
	if_stmt4  goto 31
	while_stmt1  goto 32
	while_stmt2  goto 33
	for_stmt1  goto 34
	for_stmt2  goto 35
	suite2  goto 105
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 98
	if_stmt1 : if_stmt2 test ':' .  (21)

	.  reduce 21


state 99
	if_stmt3 : if_stmt4 if_stmt5 ':' .  (23)

	.  reduce 23


state 100
	while_stmt1 : while_stmt2 test ':' .  (28)

	.  reduce 28


state 101
	for_stmt1 : for_stmt2 test ':' .  (31)

	.  reduce 31


state 102
	expr1 : op expr .  (61)

	.  reduce 61


state 103
	suite : suite5 suite3 DEINDENTA .  (34)

	.  reduce 34


state 104
	suite2 : stmt .  (36)

	.  reduce 36


state 105
	suite2 : suite2 . stmt  (35)
	suite3 : suite4 suite2 .  (37)

	WHILE  shift 1
	FOR  shift 2
	NOT  shift 3
	IF  shift 4
	PRINT  shift 5
	BOOLEANO  shift 6
	ENTERO  shift 7
	REAL  shift 8
	IDENTIFICADOR  shift 9
	CADENA  shift 10
	'-'  shift 11
	'+'  shift 12
	DEINDENTA  reduce 37

	stmt  goto 106
	simple_stmt  goto 17
	compound_stmt  goto 18
	small_stmt  goto 19
	expr_stmt  goto 20
	print_stmt  goto 21
	expr_stmt1  goto 22
	test  goto 23
	print_stmt1  goto 24
	if_stmt  goto 25
	while_stmt  goto 26
	for_stmt  goto 27
	if_stmt1  goto 28
	if_stmt3  goto 29
	if_stmt2  goto 30
	if_stmt4  goto 31
	while_stmt1  goto 32
	while_stmt2  goto 33
	for_stmt1  goto 34
	for_stmt2  goto 35
	or_test  goto 36
	and_test  goto 37
	or_test1  goto 38
	not_test  goto 39
	and_test1  goto 40
	not_test1  goto 41
	comparison  goto 42
	expr  goto 43
	comparison1  goto 44
	term  goto 45
	op  goto 46
	factor  goto 47
	term1  goto 48
	power  goto 49
	power1  goto 50
	atom  goto 51


state 106
	suite2 : suite2 stmt .  (35)

	.  reduce 35


34 terminals, 49 nonterminals
81 grammar rules, 107 states
